2010-03-02  Kenichi Handa  <handa@m17n.org>

	* character.c (parse_str_as_multibyte): Fix handling of the
	multibyte form of raw-bytes.
	(str_as_multibyte): Likewise.

	* buffer.c (Fset_buffer_multibyte): Fix handling of the multibyte
	form of raw-bytes.

2010-02-28  Chong Yidong  <cyd@stupidchicken.com>

	* charset.c (load_charset_map_from_file)
	(load_charset_map_from_vector): Zero out allocated
	charset_map_entries before using them.

2010-02-27  Andreas Schwab  <schwab@linux-m68k.org>

	* w32uniscribe.c (uniscribe_check_otf): Fix length check.

2010-02-27  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Recognize "Book", "Condensed",
	"Medium", and "Semi-Condensed" keywords in GTK names (Bug#5646).

2010-02-26  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_get_open_type_spec): Fix parsing of otf_spec.

	* xdisp.c (reseat_to_string): Fix previous change.

2010-02-26  David Reitter  <david.reitter@gmail.com>

	* nsfont.m (nsfont_draw): ns_antialias_text should be a
	Lisp_Object (Bug#4736).

2010-02-25  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (reseat_to_string): Fix previous change (bug#5609).

2010-02-24  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (XTflash): Move declarations before statements.

	* gtkutil.c (xg_get_gdk_display): Remove (unused).
	(xg_get_pixbuf_from_pix_and_mask, xg_create_frame_widgets)
	(xg_toggle_notify_cb, xg_set_toolkit_scroll_bar_thumb)
	(xg_create_tool_bar): Remove unused variables.
	(x_wm_set_size_hint): Move declarations before statements.
	(xg_create_frame_widgets): Remove variable grav,

2010-02-21  Chong Yidong  <cyd@stupidchicken.com>

	* m/arm.h: Define the LIB_GCC flag to be -lgcc_s (Bug#5518).

2010-02-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* term.c (fatal): Add a final \n if needed (bug#5596).

2010-02-18  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_ring_bell): Revert last change (Bug#5569).

2010-02-18  Glenn Morris  <rgm@gnu.org>

	* callint.c (Finteractive): Doc fix.
